disabled logging to better performance;